--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ find_package(Drogon REQUIRED)
 add_executable(TaskManager
     src/main.cc
     src/controllers/TaskController.cpp
+    src/controllers/UserController.cpp
+    src/services/TaskService.cpp
+    src/services/UserService.cpp
 )
 
 target_link_libraries(TaskManager PRIVATE Drogon::Drogon)
